<resources>
    <string name="app_name">NoteApp</string>
    <string name="empty_image">emptyImage</string>
    <string name="fab_add_note">floating ActionButton for Add New Note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="priority">Priority</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="close_button">closeButton</string>
    <string name="category_image">CategoryImage</string>
    <string name="menu_image">menuImage</string>
    <string name="delete">Delete</string>
    <string name="edite">Edite</string>
    <string name="select_priority">Select Priority</string>
</resources>